--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
   </head>
   <body>
     <div class="card-container">
-      <div class="card card-1">
-        <img src="#" alt="#">
-        <h3></h3>
-        <p></p>
-        <a href="#"></a>
-      <div class="card card-2">
-        <img src="#" alt="#">
-        <h3></h3>
-        <p></p>
-        <a href="#"></a>
-      <div class="card card-3">
-        <img src="#" alt="#">
-        <h3></h3>
-        <p></p>
-        <a href="#"></a>
+      <div class="card">
+        <img src="images/linear-rgb-color-wheel.png" alt="#" />
+        <h3>Applying color to UI</h3>
+        <p>In a UI, color has a variety of roles:...</p>
+        <a href="#">Related link</a>
+      </div>
+      <div class="card">
+        <img src="images/text-bubble.png" alt="#" />
+        <h3>Imagery in UI</h3>
+        <p>Imagery communicates an...</p>
+        <a href="#">Related article</a>
+      </div>
+      <div class="card">
+        <img src="images/linear-rgb-color-wheel.png" alt="#" />
+        <h3>The color system</h3>
+        <p>Create a color theme that reflects...</p>
+        <a href="#">Related link</a>
       </div>
     </div>
   </body>
