Modify card and its link
finalized the card size/ratio. Added box shadow to card. Added :hover background and box shadow. Changed the link color and added the icon in the link.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <title>Tres Cards</title>
   </head>
   <body>
@@ -13,18 +14,21 @@
         <h3>Applying color to UI</h3>
         <p>In a UI, color has a variety of roles:...</p>
         <a href="#">Related link</a>
+        <i class="fa-solid fa-arrow-up-right-from-square"></i>
       </div>
       <div class="card">
         <img src="images/text-bubble.png" alt="#" />
         <h3>Imagery in UI</h3>
         <p>Imagery communicates an...</p>
         <a href="#">Related article</a>
+        <i class="fa-solid fa-arrow-up-right-from-square"></i>
       </div>
       <div class="card">
         <img src="images/linear-rgb-color-wheel.png" alt="#" />
         <h3>The color system</h3>
         <p>Create a color theme that reflects...</p>
         <a href="#">Related link</a>
+        <i class="fa-solid fa-arrow-up-right-from-square"></i>
       </div>
     </div>
   </body>
