Modify card images and make links function
Modified the card images to work smoothly on the page using graphic design software. Added URLs to the links.

--- a/index.html
+++ b/index.html
@@ -13,22 +13,28 @@
         <img src="images/linear-rgb-color-wheel.png" alt="#" />
         <h3>Applying color to UI</h3>
         <p>In a UI, color has a variety of roles:...</p>
-        <a href="#">Related link</a>
-        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        <a href="https://m2.material.io/design/color/applying-color-to-ui.html">
+          <p>Related link</p>
+          <i class="fa-solid fa-arrow-up-right-from-square"></i
+        ></a>
       </div>
       <div class="card">
         <img src="images/text-bubble.png" alt="#" />
         <h3>Imagery in UI</h3>
         <p>Imagery communicates an...</p>
-        <a href="#">Related article</a>
-        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        <a href="https://m2.material.io/design/communication/imagery.html">
+          <p>Related article</p>
+          <i class="fa-solid fa-arrow-up-right-from-square"></i
+        ></a>
       </div>
       <div class="card">
         <img src="images/linear-rgb-color-wheel.png" alt="#" />
         <h3>The color system</h3>
         <p>Create a color theme that reflects...</p>
-        <a href="#">Related link</a>
-        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        <a href="https://m2.material.io/design/color/the-color-system.html">
+          <p>Related link</p>
+          <i class="fa-solid fa-arrow-up-right-from-square"></i
+        ></a>
       </div>
     </div>
   </body>
